--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -9,19 +9,41 @@
         android:id="@+id/imageView"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         app:srcCompat="@android:drawable/ic_dialog_alert" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
+    <FrameLayout
+        android:id="@+id/contentFragment"
         android:layout_toRightOf="@+id/imageView"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp">
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:layout_marginTop="10dp"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/contentView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/textView"
+                android:textSize="16sp"
+                android:text="content text"
+                android:layout_marginTop="5dp"/>
+        </RelativeLayout>
+
+    </FrameLayout>
 
 </RelativeLayout>
